--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     
-    <form method="POST" action="https://formspree.io/f/mpwovqye">
+    <form method="POST" action="https://formspree.io/f/mwpwgvdd">
         <h1>טופס פנייה</h1>
         
         <label for="full_name">שם מלא:</label>
