--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
-            padding: 20px 10px; /* קצת יותר קטן בצדדים כדי לאפשר רווח במובייל */
+            padding: 20px 10px;
             background-color: var(--background-color);
             color: var(--text-color);
             direction: rtl;
@@ -280,6 +280,31 @@
 
             <label for="first_meeting">איך הייתה החוויה להיפגש עם התינוק באינקובטור בפעם הראשונה? מה הרגשתם? מה חשבתם?</label>
             <textarea id="first_meeting" name="מפגש ראשון באינקובטור" rows="6" required></textarea>
+            
+            <h2>💪 ההתמודדות והכוחות</h2>
+
+            <label for="strength_source">מה הדבר שנתן לכם כוח להתמודד עם הקשיים בפגייה?</label>
+            <textarea id="strength_source" name="כוח להתמודדות" rows="4" required></textarea>
+
+            <label for="siblings_handling">אם היו עוד ילדים בבית – איך התנהלתם בתקופה הזו, ומה חשוב בעיניכם לשים לב אליו?</label>
+            <textarea id="siblings_handling" name="התנהלות עם ילדים נוספים" rows="4" required></textarea>
+
+            <label for="siblings_mediation">איך תיווכתם להם את זה שלא ניתן לראות את התינוק שזה עתה נולד?</label>
+            <textarea id="siblings_mediation" name="תיווך לילדים" rows="4" required></textarea>
+
+            <label for="crisis_moments">ספרו על רגעי משבר שהיו לכם.</label>
+            <textarea id="crisis_moments" name="רגעי משבר" rows="5" required></textarea>
+
+            <label for="light_points">ומה היו נקודות האור שנאחזתם בהן כדי לקום ולהמשיך?</label>
+            <textarea id="light_points" name="נקודות אור" rows="5" required></textarea>
+
+            <h2>💌 לסיום</h2>
+
+            <label for="encouragement">כתבו משפט עידוד אחד להורים שמתמודדים עכשיו עם אשפוז בפגייה.</label>
+            <textarea id="encouragement" name="משפט עידוד" rows="3" required></textarea>
+
+            <label for="past_advice">מה הייתם רוצים שיגידו לכם אז?</label>
+            <textarea id="past_advice" name="מה הייתם רוצים שיגידו לכם" rows="3" required></textarea>
             
             <input type="hidden" name="_next" value="https://new-rdei.onrender.com/?status=success" />
 
