--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
     <div class="content-container">
 
         <div class="header-box">
-            <h2>💗 הסיפור שלנו בפגייה</h2>
+            <h2>💗 ספר גדול על פגים קטנים 💗</h2>
             <p style="font-weight: bold; font-size: 1.15em;">מיזם של דיקלה ויגאל גולד, מתנדבים בעמותת לה"ב</p>
             <p>אנחנו אוספים סיפורים אישיים מהורים שעברו לידה מוקדמת, כדי ליצור ספר דיגיטלי שיחזק ויעודד הורים שמגיעים היום לראשונה לפגייה. נשמח מאוד לשתף גם את הסיפור שלכם — במלואו או באופן אנונימי, לפי בחירתכם.</p>
         </div>
