--- a/index.html
+++ b/index.html
@@ -79,10 +79,13 @@
         }
 
         .logo img {
-            max-width: 120px; /* גודל מקסימלי סביר */
-            width: 30%; /* רספונסיביות */
+            max-width: 180px; /* הגדלה קלה כי הלוגו החדש רחב יותר */
+            width: 50%; /* רספונסיביות */
             height: auto;
             display: inline-block;
+            
+            /* *** פילטר CSS להפיכת הלוגו (שהיה ורוד) ללבן כדי שיבלוט על רקע כהה *** */
+            filter: invert(1) grayscale(1) brightness(200%);
         }
         /* *** סוף סגנון הלוגו החדש *** */
 
@@ -314,7 +317,7 @@
                 font-size: 0.9em;
             }
             .logo img {
-                max-width: 100px; /* קטן יותר במסכים צרים מאוד */
+                max-width: 150px; /* קטן יותר במסכים צרים מאוד */
             }
         }
     </style>
@@ -323,7 +326,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <img src="https://ibb.co/jvphSvj" alt="לוגו האתר">
+                <img src="logo.jpeg" alt="לוגו עמותת להב">
             </div>
             
             <h1>סיפור גדול על פגים קטנים</h1>
