--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
             100% { transform: translateX(100%); }
         }
         
-        /* *** סגנון הלוגו הנקי החדש (ללא פילטרים) *** */
+        /* *** סגנון הלוגו (מותאם ללוגו הוורוד על רקע בהיר) *** */
         .logo {
             text-align: center;
             margin-bottom: 25px; /* מרווח מתחת ללוגו לפני הכותרת */
         }
 
         .logo img {
-            max-width: 250px; /* הגדלה קלה כדי שיראה טוב */
-            width: 60%; /* רספונסיביות */
+            max-width: 250px; 
+            width: 60%; 
             height: auto;
             display: inline-block;
-            /* הוספתי רקע שחור בתוך התמונה עצמה (כפי שנראה בתמונה המקורית ששלחת image_bffabf.png) כדי שיראה טוב יותר */
-            background-color: #000; 
+            /* רקע לבן כדי שהלוגו הוורוד ייראה ברור */
+            background-color: white; 
             padding: 8px 15px;
             border-radius: 6px;
         }
@@ -327,7 +327,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <img src="image_bffabf.png" alt="לוגו עמותת להב">
+                <img src="pink_logo.jpeg" alt="לוגו עמותת להב">
             </div>
             
             <h1>סיפור גדול על פגים קטנים</h1>
