--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="list-item"><span class="icon">✅</span> להעלות את המודעות ללידות מוקדמות</div>
             <p style="margin-right: 20px;">ולספר לעולם על הפגים הקטנים שהם גיבורים גדולים..</p>
 
-            <div class="list-item"><span class="icon">✅</span> **ומעל הכל** , כאמור שהסיפור שלכם יתן כוח להורים אחרים שנמצאים באותו מצב...</div>
+            <div class="list-item"><span class="icon">✅</span> ומעל הכל , כאמור שהסיפור שלכם יתן כוח להורים אחרים שנמצאים באותו מצב...</div>
             
             <div class="contact-info">
                 <p>תודה על שיתוף הפעולה!</p>
