--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 <input type="hidden" name="bot-field" />
 
                 <div class="section">
-                    <div class="section-title">🗳️ אופן שיתוף הסיפור:</div>
+                    <div class="section-title">איך תרצו שהסיפור שלכם יפורסם?</div>
                     <div class="radio-group">
                         <div class="radio-item">
                             <input type="radio" id="r1" name="אופן שיתוף הסיפור" value="בשם מלא" required>
