--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 <img src="pink_logo.jpeg" alt="לוגו עמותת להב">
             </div>
             
-            <h1>סיפור גדול על פגים קטנים</h1>
+            <h1>ספר גדול על פגים קטנים</h1>
             
             <p>היי אתם 🙋🏼‍♀️🙋🏼‍♂️</p>
             <p>
@@ -453,7 +453,7 @@
                 </div>
 
                 <div class="section">
-                    <div class="section-title">🎵 שיר מלווה</div>
+                    <div class="section-title">בחרו שיר שמסמל בשבילכם את תקופת האשפוז בפגיה</div>
                     <div class="form-group">
                         <label for="song">שם השיר:</label>
                         <input type="text" id="song" name="שיר מלווה" required>
