--- a/index.html
+++ b/index.html
@@ -467,19 +467,19 @@
                 <div class="section">
                     <div class="section-title">👶 סיפור הלידה והפגייה</div>
                     <div class="form-group">
-                        <label for="early">מתי הבנתם שתלדו מוקדם / הגעתם לפגייה?</label>
+                        <label for="early">מתי הבנתם שתלדו מוקדם?</label>
                         <textarea id="early" name="הבנה על לידה מוקדמת" required></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="week">באיזה שבוע הילד/ה נולד/ה?</label>
+                        <label for="week">באיזה שבוע ילדתם?</label>
                         <input type="text" id="week" name="שבוע לידה" required>
                     </div>
                     <div class="form-group">
-                        <label for="realization">הקליטה אחרי הלידה (איך הרגשתם כשראיתם אותו/אותה לראשונה):</label>
+                        <label for="realization">מתי קלטת שאת (או אתה) אחרי לידה?</label>
                         <textarea id="realization" name="קליטת לידה" required></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="first">תיאור המפגש הראשון עם הפג/ה:</label>
+                        <label for="first">איך הייתה החוויה להיפגש עם התינוק באינקובטור בפעם הראשונה?</label>
                         <textarea id="first" name="מפגש ראשון באינקובטור" required></textarea>
                     </div>
                 </div>
@@ -487,31 +487,31 @@
                 <div class="section">
                     <div class="section-title">💪 כוח והתמודדות</div>
                     <div class="form-group">
-                        <label for="strength">מה נתן לכם כוח וסייע בהתמודדות?</label>
+                        <label for="strength">מה הדבר שנתן לכם כוח להתמודד עם הקשיים בפגייה?</label>
                         <textarea id="strength" name="כוח להתמודדות" required></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="siblings">אם יש ילדים אחרים בבית, כיצד התנהלתם:</label>
+                        <label for="siblings">אם היו עוד ילדים בבית – איך התנהלתם בתקופה הזו, ומה חשוב בעיניכם לשים לב אליו?</label>
                         <textarea id="siblings" name="התנהלות עם ילדים נוספים"></textarea> 
                     </div>
                     <div class="form-group">
-                        <label for="mediation">איך הסברתם להם את המצב?</label>
+                        <label for="mediation">איך תיווכתם להם את זה שלא ניתן לראות את התינוק שזה עתה נולד?</label>
                         <textarea id="mediation" name="תיווך לילדים"></textarea> 
                     </div>
                     <div class="form-group">
-                        <label for="crisis">רגעי משבר קשים (שאפשר לשתף):</label>
+                        <label for="crisis">ספרו על רגעי משבר שהיו לכם.</label>
                         <textarea id="crisis" name="רגעי משבר" required></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="light">נקודות אור/רגעי נס קטנים:</label>
+                        <label for="light">ומה היו נקודות האור שנאחזתם בהן כדי לקום ולהמשיך?</label>
                         <textarea id="light" name="נקודות אור" required></textarea>
                     </div>
                 </div>
 
                 <div class="section">
-                    <div class="section-title">💌 מסר להורים שבפגייה כעת</div>
+                    <div class="section-title">💌לסיום</div>
                     <div class="form-group">
-                        <label for="encourage">משפט עידוד / מנטרה שליוותה אתכם:</label>
+                        <label for="encourage">כתבו משפט עידוד אחד להורים שמתמודדים עכשיו עם אשפוז בפגייה. מה הייתם רוצים שיגידו לכם אז?</label>
                         <textarea id="encourage" name="משפט עידוד" required></textarea>
                     </div>
                     <div class="form-group">
