--- a/index.html
+++ b/index.html
@@ -547,7 +547,11 @@
                         </label>
                         <span id="filename_today" style="font-size: 0.8em; color: #A0E4F0; margin-top: 5px; display: block; text-align: center;"></span>
                         
-
+                        <p class="upload-warning">
+                            ⚠️ חשוב: העלאת תמונות עלולה לקחת דקה או שתיים. אנא לחצו על "שלח" פעם אחת והמתינו בסבלנות עד לקבלת הודעת האישור הירוקה.
+                        </p>
+                        <p style="font-size: 0.8em; opacity: 0.7; margin-top: 5px;">(שימו לב: כל קובץ מוגבל ל-8MB)</p>
+                    </div>
                 </div>
 
                 <button type="submit" id="submit-button">שלח את הסיפור 📤</button>
