--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
             </p>
             
             <p>אנחנו, יגאל ודיקלה גולד, הורים לעמית שנולד בשבוע 26 בהפתעה, ומתנדבים בעמותת לה"ב</p>
-            <p> הלאחר הרבה שיחות עם הורים לפגים המוני פוסטים של סיפורי פגים 😃 ואינסוף שיחות עם רומי 😃חלמנו והינה מגשימים... 
-                הספר הגדול על פגים קטנים יוצא לדרך!!</p>
+            <p> הלאחר הרבה שיחות עם הורים לפגים המוני פוסטים של סיפורי פגים 😃 ואינסוף שיחות עם רומי 😃חלמנו והינה מגשימים... </p>
+            <p> ספר גדול על פגים קטנים יוצר לדרך!!! </p>
             
             <p class="goal-title">המטרה שלנו:</p>
             <p>לתת כוח ותקווה להורים שנמצאים עכשיו בפגייה .. חלקם מבולבלים, עייפים, ושבורי לב.</p>
