--- a/index.html
+++ b/index.html
@@ -444,8 +444,12 @@
                         <input type="text" id="name" name="שם מלא" required>
                     </div>
                     <div class="form-group">
-                        <label for="contact">טלפון / מייל:</label>
-                        <input type="text" id="contact" name="אימייל או טלפון ליצירת קשר" required>
+                        <label for="contact">טלפון:</label>
+                        <input type="text" id="contact" name="טלפון" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="contact">אימייל:</label>
+                        <input type="text" id="contact" name="אימייל" required>
                     </div>
                 </div>
 
