--- a/index.html
+++ b/index.html
@@ -444,14 +444,12 @@
                         <input type="text" id="name" name="שם מלא" required>
                     </div>
                     <div class="form-group">
-                        <!-- שינוי: id שונה וייחודי לטלפון -->
-                        <label for="contact_phone">טלפון:</label>
-                        <input type="text" id="contact_phone" name="טלפון" required>
+                        <label for="contact">טלפון:</label>
+                        <input type="text" id="contact" name="טלפון" required>
                     </div>
                     <div class="form-group">
-                        <!-- שינוי: id שונה וייחודי לאימייל, ושינוי type ל-email -->
-                        <label for="contact_email">אימייל:</label>
-                        <input type="email" id="contact_email" name="אימייל" required>
+                        <label for="contact">אימייל:</label>
+                        <input type="text" id="contact" name="אימייל" required>
                     </div>
                 </div>
 
@@ -615,3 +613,4 @@
     </script>
 </body>
 </html>
+
