--- a/index.html
+++ b/index.html
@@ -445,11 +445,11 @@
                     </div>
                     <div class="form-group">
                         <label for="contact">טלפון:</label>
-                        <input type="text" id="contact" name="טלפון" required>
+                        <input type="text" id="phone" name="טלפון" required>
                     </div>
                     <div class="form-group">
                         <label for="contact">אימייל:</label>
-                        <input type="text" id="contact" name="אימייל" required>
+                        <input type="text" id="email" name="אימייל" required>
                     </div>
                 </div>
 
