--- a/index.html
+++ b/index.html
@@ -409,9 +409,13 @@
             
             <div class="contact-info">
                 <p>תודה על שיתוף הפעולה!</p>
-                <p>📞 <strong>דיקלה 0525238282</strong> | 📞 <strong>יגאל 0528119587</strong></p>
+                <p>
+                    📞 <strong><a href="https://wa.me/972525238282" target="_blank" style="color: inherit; text-decoration: none;">דיקלה 0525238282</a></strong> |
+                    📞 <strong><a href="https://wa.me/972528119587" target="_blank" style="color: inherit; text-decoration: none;">יגאל 0528119587</a></strong>
+                </p>
                 <p style="font-size: 0.75em; color: #FFF; opacity: 0.7;">( מנהלי קבוצות אמהות ואבות לפגים - עמותת לה"ב )</p>
             </div>
+
         </div>
 
         <div class="form-container">
