--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
             
 
             <p>
+                הורים לפגים?
                 איך חוויתם את תקופת הפגייה?<br>
                 מה עזר לכם להתמודד?<br>
                 מה הייתם רוצים להגיד להורים שנמצאים שם עכשיו?
