--- a/index.html
+++ b/index.html
@@ -394,7 +394,8 @@
             </p>
             
             <p>אנחנו, יגאל ודיקלה גולד, הורים לעמית שנולד בשבוע 26 בהפתעה, ומתנדבים בעמותת לה"ב</p>
-            <p> הלאחר הרבה שיחות עם הורים לפגים המוני פוסטים של סיפורי פגים 😃 ואינסוף שיחות עם רומי 😃חלמנו והינה מגשימים... </p>
+            <p> לאחר הרבה שיחות עם הורים לפגים המוני פוסטים של סיפורי פגים
+                ואינסוף שיחות עם רומי חלמנו והינה מגשימים... </p>
             <p> ספר גדול על פגים קטנים יוצר לדרך!!! </p>
             
             <p class="goal-title">המטרה שלנו:</p>
