--- a/index.html
+++ b/index.html
@@ -477,6 +477,10 @@
                         </label>
                         <span id="filename_symbol" style="font-size: 0.8em; color: #A0E4F0; margin-top: 5px; display: block; text-align: center;"></span>
                     </div>
+                    <div class="form-group">
+                        <label for="song_why">למה בחרתם  בתמונה הזו?</label>
+                        <textarea id="song_why" name="סיבת בחירת השיר" required></textarea>
+                    </div>
                 </div>
 
                 <div class="section">
