--- a/index.html
+++ b/index.html
@@ -434,11 +434,15 @@
                     <div class="radio-group">
                         <div class="radio-item">
                             <input type="radio" id="r1" name="אופן שיתוף הסיפור" value="בשם מלא" required>
-                            <label for="r1">בשמי המלא</label>
+                            <label for="r1">בשמי המלא ללא כתובת אימייל וטלפון </label>
+                        </div>
+                        <div class="radio-item">
+                            <input type="radio" id="r1" name="אופן שיתוף הסיפור" value="בשם מלא כולל כתובת" required>
+                            <label for="r1">בשמי המלא כולל כתובת אימייל וטלפון (לטובת משפחות שיקראו את הספר ויצרו קשר ישיר)</label>
                         </div>
                         <div class="radio-item">
                             <input type="radio" id="r2" name="אופן שיתוף הסיפור" value="אנונימי" required>
-                            <label for="r2">אנונימי</label>
+                            <label for="r2">אנונימי </label>
                         </div>
                     </div>
                 </div>
