--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             <p>לאחר הרבה שיחות עם הורים לפגים, </p>
              <p>המוני פוסטים של סיפורי פגים, </p>
             <p>ואינסוף שיחות עם רומי.. חלמנו, והינה מגשימים... </p>
-            <p>ספר גדול על פגים קטנים יוצר לדרך!!! </p>
+            <p>ספר גדול על פגים קטנים יוצא לדרך!!! </p>
             
             <p class="goal-title">המטרה שלנו:</p>
             
