--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ספר גדול על פגים קטנים</title>
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <style>
+        @font-face {
+            font-family: 'KtavYad';
+            src: url('KtavYadCLM-MediumItalic.otf') format('opentype');
+        }
+    </style>
     
     <style>
         /* (כל סגנונות ה-CSS הקודמים נשמרו, למעט שינויים ב-input[type="file"]) */
@@ -22,7 +27,7 @@
             min-height: 100vh;
             background: linear-gradient(180deg, #0A3A42 0%, #0D5A68 50%, #116B78 100%);
             background-attachment: fixed;
-            font-family: 'Varela Round', sans-serif;
+            font-family: 'KtavYad', sans-serif;
             color: #FFF; /* הגדרת ברירת המחדל הכללית ללבן */
             direction: rtl;
             overflow-x: hidden;
@@ -208,7 +213,7 @@
             border-radius: 10px;
             background: rgba(232, 244, 246, 0.9);
             color: #0A3A42; 
-            font-family: 'Varela Round', sans-serif;
+            font-family: 'KtavYad', sans-serif;
             font-size: 0.9em;
             -webkit-appearance: none;
             appearance: none;
@@ -313,7 +318,7 @@
             border-radius: 10px;
             font-size: 1.0em;
             font-weight: 800;
-            font-family: 'Varela Round', sans-serif;
+            font-family: 'KtavYad', sans-serif;
             cursor: pointer;
             box-shadow: 0 8px 20px rgba(77, 173, 181, 0.4);
             transition: all 0.3s;
