--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ספר גדול על פגים קטנים</title>
-    <style>
-        @font-face {
-            font-family: 'KtavYad';
-            src: url('KtavYadCLM-MediumItalic.otf') format('opentype');
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     
 
     <style>
@@ -26,7 +21,7 @@
             min-height: 100vh;
             background: linear-gradient(180deg, #E6D5F0 0%, #D9C5E8 50%, #CDB5E0 100%);
             background-attachment: fixed;
-            font-family: 'KtavYad', sans-serif;
+            font-family: 'Varela Round', sans-serif;
             color: #FFF; /* הגדרת ברירת המחדל הכללית ללבן */
             direction: rtl;
             overflow-x: hidden;
@@ -212,7 +207,7 @@
             border-radius: 10px;
             background: rgba(240, 230, 250, 0.9);
             color: #6B3D9B; 
-            font-family: 'KtavYad', sans-serif;
+            font-family: 'Varela Round', sans-serif;
             font-size: 0.9em;
             -webkit-appearance: none;
             appearance: none;
@@ -317,7 +312,7 @@
             border-radius: 10px;
             font-size: 1.0em;
             font-weight: 800;
-            font-family: 'KtavYad', sans-serif;
+            font-family: 'Varela Round', sans-serif;
             cursor: pointer;
             box-shadow: 0 8px 20px rgba(200, 150, 230, 0.4);
             transition: all 0.3s;
