--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         html, body {
             width: 100%;
             min-height: 100vh;
-            background: linear-gradient(180deg, #E6D5F0 0%, #C4A8D8 50%, #CDB5E0 100%);
+            background: linear-gradient(180deg, #D4C3E0 0%, #C4A8D8 50%, #CDB5E0 100%);
             background-attachment: fixed;
             font-family: 'Varela Round', sans-serif;
             color: #FFF; /* הגדרת ברירת המחדל הכללית ללבן */
