--- a/index.html
+++ b/index.html
@@ -92,13 +92,19 @@
 
         /* כותרת ראשית (שוּנָה ללבן) */
         .header h1 {
-            font-size: 2.1em;
+            font-size: 2.4em;
             font-weight: 900;
             margin-bottom: 25px; 
             color: #FFF; 
             text-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
             letter-spacing: 1px;
             text-align: center;
+            animation: glow 2s ease-in-out infinite;
+        }
+        
+        @keyframes glow {
+            0%, 100% { text-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); }
+            50% { text-shadow: 0 4px 20px rgba(255, 255, 255, 0.6), 0 0 30px rgba(255, 255, 255, 0.4); }
         }
         
         /* פסקאות בתוך ה-header (שוּנָה ללבן מובהק) */
