--- a/index.html
+++ b/index.html
@@ -698,4 +698,26 @@
 
                     <div class="form-group">
                         <label for="photo_pagiya">תמונה 1: מתקופת הפגייה</label>
-                        <input type="file" id="photo_pagiya" name="תמ
+                        <input type="file" id="photo_pagiya" name="תמונה - פגייה" accept="image/*">
+                        <label for="photo_pagiya" class="file-label">
+                            בחר קובץ לפגייה ⬆️
+                        </label>
+                        <span id="filename_pagiya" style="font-size: 0.8em; color: #D4B5E8; margin-top: 5px; display: block; text-align: center;"></span>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="photo_today">תמונה 2: הילד/ה היום</label>
+                        <input type="file" id="photo_today" name="תמונה - היום" accept="image/*">
+                        <label for="photo_today" class="file-label">
+                            בחר קובץ להיום 📸
+                        </label>
+                        <span id="filename_today" style="font-size: 0.8em; color: #D4B5E8; margin-top: 5px; display: block; text-align: center;"></span>
+                        
+                        <p class="upload-warning">
+                            ⚠️ חשוב: העלאת תמונות עלולה לקחת דקה או שתיים. אנא לחצו על "שלח" פעם אחת והמתינו בסבלנות עד לקבלת הודעת האישור הירוקה.
+                        </p>
+                        <p style="font-size: 0.8em; opacity: 0.7; margin-top: 5px;">(שימו לב: כל קובץ מוגבל ל-8MB)</p>
+                    </div>
+                </div>
+
+                <button type="submit" id="submit-button">שלח את הסיפור 📤</button>
