--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                         <label for="photo_symbol">בחרו תמונה/צילום (לא של התינוק) שמסמלת בשבילכם את תקופת הפגייה</label>
                         <input type="file" id="photo_symbol" name="תמונה סימבולית - פגייה" accept="image/*">
                         <label for="photo_symbol" class="file-label">
-                            בחר קובץ (תמונה)⌛
+                            ⌛בחר קובץ (תמונה)
                         </label>
                         <span id="filename_symbol" class="filename-display"></span>
                     </div>
