--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ספר גדול על פגים קטנים</title>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-    
+    <link rel="icon" type="image/png" href="logo_web_lahav.png">
 
     <style>
         /* איפוס בסיסי והגדרות גלובליות */
